Prevent flickering when modify beer image

--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -307,6 +307,12 @@ span.span-infos {
 
 .star-ratings-css-bottom { z-index: 0; }
 
+.imghoverbeer{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+}
+
 /* selecionator */
 .selectionator {
     position: relative;
